<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoAutoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoAutoNuevo"
        />
    <TextView
        android:id="@+id/selecMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecMarca"
        />
    <RadioGroup
        android:id="@+id/rgMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <RadioButton
            android:id="@+id/rAudi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rAudi"
            />
        <RadioButton
            android:id="@+id/rVw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rVw"
            />
        <RadioButton
            android:id="@+id/rFord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rFord"
            />
        <RadioButton
            android:id="@+id/otra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rOtra"
            />

    </RadioGroup>
    <EditText
        android:id="@+id/rMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/otraMarca"
        />
<!--
    <EditText
        android:id="@+id/ingresarMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Marca del auto"
        />
        -->
    <Spinner

        android:id="@+id/ingresarColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Color"

        />





    <EditText
        android:id="@+id/otroColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Otro Color"
        />
    <Button
        android:id="@+id/botonIngresarAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresarAuto"
        android:onClick="ingresarNuevo"
        />


</LinearLayout>